<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/greetings_view_text"
        android:textAlignment="center"
        android:textColor="@color/greetingstextcolor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="38dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/greetings"
        app:layout_constraintStart_toEndOf="@+id/greetings"
        app:layout_constraintTop_toTopOf="@+id/greetings"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_trans" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:iconifiedByDefault="false"
        android:queryHint="@string/query_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_color"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/love" />

            <TextView
                android:id="@+id/profile_name"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/profile_name"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <TextView
                android:id="@+id/location_view"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="177dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="176dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/location"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_name" />

            <Button
                android:id="@+id/follow_button"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="29dp"
                android:text="@string/follow_button_text"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                app:backgroundTint="@color/followbutton"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/message_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_view" />

            <Button
                android:id="@+id/message_button"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/message_button_text"
                android:textColor="?attr/colorPrimary"
                android:textSize="18sp"
                app:backgroundTint="@color/messagebutton"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/follow_button" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@+id/image4"
                app:layout_constraintEnd_toStartOf="@+id/image2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message_button"
                app:srcCompat="@drawable/picture9" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toTopOf="@+id/image5"
                app:layout_constraintEnd_toStartOf="@+id/image3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toBottomOf="@+id/message_button"
                app:srcCompat="@drawable/picture8" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toTopOf="@+id/image6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:layout_constraintTop_toBottomOf="@+id/message_button"
                app:srcCompat="@drawable/picture7" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/image7"
                app:layout_constraintEnd_toStartOf="@+id/image5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image1"
                app:srcCompat="@drawable/picture6" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/image8"
                app:layout_constraintEnd_toStartOf="@+id/image6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image4"
                app:layout_constraintTop_toBottomOf="@+id/image2"
                app:srcCompat="@drawable/picture5" />

            <ImageView
                android:id="@+id/image6"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/image9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image5"
                app:layout_constraintTop_toBottomOf="@+id/image3"
                app:layout_constraintVertical_bias="0.333"
                app:srcCompat="@drawable/picture4" />

            <ImageView
                android:id="@+id/image7"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/see_more"
                app:layout_constraintEnd_toStartOf="@+id/image8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image4"
                app:srcCompat="@drawable/picture3" />

            <ImageView
                android:id="@+id/image8"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/see_more"
                app:layout_constraintEnd_toStartOf="@+id/image9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image7"
                app:layout_constraintTop_toBottomOf="@+id/image5"
                app:srcCompat="@drawable/picture2" />

            <ImageView
                android:id="@+id/image9"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/see_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image8"
                app:layout_constraintTop_toBottomOf="@+id/image6"
                app:srcCompat="@drawable/picture1" />

            <Button
                android:id="@+id/see_more"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/see_more_button_text"
                android:textColor="@color/buttontextcolor"
                android:textSize="20sp"
                app:backgroundTint="@color/messagebutton"
                app:cornerRadius="8dp"
                app:iconTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Switch
        android:id="@+id/dark_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>